[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routeplex"
version = "1.0.0"
description = "RoutePlex Python SDK - Multi-model AI gateway. Route requests across OpenAI, Anthropic, and Google Gemini through a unified API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "RoutePlex", email = "pashupathi@routeplex.com"},
]
keywords = ["ai", "llm", "openai", "anthropic", "gemini", "gateway", "routing", "multi-model"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://routeplex.com?utm_source=pypi&utm_medium=package&utm_campaign=python-sdk"
Documentation = "https://routeplex.com/docs?utm_source=pypi&utm_medium=package&utm_campaign=python-sdk"
Repository = "https://github.com/routeplex/routeplex-python"
"Bug Tracker" = "https://github.com/routeplex/routeplex-python/issues"
Changelog = "https://routeplex.com/changelog?utm_source=pypi&utm_medium=package&utm_campaign=python-sdk"
"API Reference" = "https://routeplex.com/api-reference?utm_source=pypi&utm_medium=package&utm_campaign=python-sdk"
